# NetPeek

./: CMakeLists.txt  Makefile  README.md
data/: netpeek-scan.xsd  os-signatures.db  report-template.html  service-probes.db  subdomains-top1k.txt  wordlist_builtin.h
data/wordlists/: subdomains-top5000.txt
docs/: NPE.md  OS.md  subenum.md
include/: args.h  cli.h  cli_privilege.h  help.h  logger.h  metrics.h  netpeek.h  ports.h  proxy.h  queue.h  socket_utils.h  target.h  timer.h  utils.h
include/core/: arena.h  checksum.h  error.h
include/discovery/: host_discovery.h  traceroute.h
include/evasion/: decoy.h  evasion.h  fragment.h  spoof.h
include/npe/: lua_compat.h  npe.h  npe_context.h  npe_engine.h  npe_error.h  npe_error_compat.h  npe_hash.h  npe_http2.h  npe_http2_adapter.h  npe_http2_frames.h  npe_http2_hpack.h  npe_loader.h  npe_registry.h  npe_result.h  npe_runtime.h  npe_sandbox.h  npe_scheduler.h  npe_script.h  npe_ssl.h  npe_types.h  npe_vm.h  npe_vm_compat.h  npe_vm_internal.h
include/npe_lib/: npe_lib.h  npe_lib_base64.h  npe_lib_brute.h  npe_lib_crypto.h  npe_lib_dns.h  npe_lib_fs.h  npe_lib_hash.h  npe_lib_http.h  npe_lib_http2.h  npe_lib_http2_frame.h  npe_lib_json.h  npe_lib_net.h  npe_lib_packet.h  npe_lib_regex.h  npe_lib_ssl.h  npe_lib_string.h  npe_lib_time.h  npe_lib_xml.h
include/npe_proto/: npe_proto.h  npe_proto_ftp.h  npe_proto_imap.h  npe_proto_ldap.h  npe_proto_mongodb.h  npe_proto_mysql.h  npe_proto_pop3.h  npe_proto_redis.h  npe_proto_smb.h  npe_proto_smtp.h  npe_proto_snmp.h  npe_proto_ssh.h  npe_proto_telnet.h
include/packet/: fast_tx.h  ip6.h  packet_parse.h  tcp_types.h
include/recon/: context.h  diff.h  evidence.h  graph.h  graph_types.h  module.h  output.h  output_base.h  output_sections.h  persist.h  port_table.h  query.h  recon.h  recon_internal.h
include/route/: route.h
include/runtime/: event_loop.h  full_runtime.h  io_engine.h  rate_ctrl.h  stats.h  thread_pool.h
include/subenum/: axfr.h  brute.h  ct_lookup.h  dns_packet.h  dns_resolver.h  permute.h  result_store.h  reverse_dns.h  subenum.h  subenum_types.h  wildcard.h  wordlist.h
include/ui/: style.h
scripts/auth/: ftp-brute.npe  http-brute.npe  mysql-brute.npe  redis-brute.npe  smtp-brute.npe  ssh-brute.npe
scripts/bench/: bench_connect_uring.sh  bench_rate_netem.sh  bench_syn_packet_mmap.sh
scripts/default/: banner-grab.npe  dns-info.npe  http-title.npe  smb-os-discovery.npe  ssh-hostkey.npe  ssh-version.npe  ssl-cert.npe
scripts/discovery/: ftp-anon.npe  http-headers.npe  http-methods.npe  http-robots.npe  http-sitemap.npe  mysql-info.npe  redis-info.npe  smb-enum-shares.npe  smtp-commands.npe  snmp-info.npe  ssl-enum-ciphers.npe  subenum.npe  telnet-ntlm-info.npe  vnc-info.npe  whois-ip.npe
scripts/intrusive/: dns-brute.npe  dns-zone-transfer.npe  http-csrf-detect.npe  http-directory-enum.npe  http-enum.npe  http-sql-injection.npe  http-xss-detect.npe
scripts/vuln/: http-log4shell.npe  http-shellshock.npe  http-vuln-cve.npe  smb-ms17-010.npe  ssl-ccs-injection.npe  ssl-heartbleed.npe  ssl-poodle.npe
src/: args.c  ephemeral.c  logger.c  main.c  metrics.c  netpeek.c  packet_parser.c  ports.c  proxy.c  target.c
src/cli/: cli.c  cli_diff.c  cli_dns.c  cli_help.c  cli_npe.c  cli_os_detect.c  cli_privilege.c  cli_recon.c  cli_route.c  cli_scan.c  cli_subenum.c  cli_version.c  help.c
src/core/: arena.c  checksum.c  error.c
src/discovery/: host_discovery.c  traceroute.c
src/evasion/: decoy.c  evasion.c  fragment.c  spoof.c
src/npe/: npe_brute.c  npe_context.c  npe_convenience.c  npe_crypto.c  npe_dns.c  npe_engine.c  npe_error.c  npe_hash.c  npe_http.c  npe_http2.c  npe_http2_adapter.c  npe_http2_frames.c  npe_http2_hpack.c  npe_intrusive.c  npe_json.c  npe_loader.c  npe_packet.c  npe_registry.c  npe_result.c  npe_runtime.c  npe_sandbox.c  npe_scheduler.c  npe_script.c  npe_socket.c  npe_ssl.c  npe_string.c  npe_table.c  npe_tls.c  npe_vm_ext.c  npe_vuln.c
src/npe_lib/: bcrypt_sbox.inc  npe_lib_base64.c  npe_lib_bcrypt.c  npe_lib_brute.c  npe_lib_crypto.c  npe_lib_dns.c  npe_lib_fs.c  npe_lib_hash.c  npe_lib_http.c  npe_lib_http2.c  npe_lib_json.c  npe_lib_kdf.c  npe_lib_net.c  npe_lib_packet.c  npe_lib_regex.c  npe_lib_ssl.c  npe_lib_string.c  npe_lib_time.c  npe_lib_xml.c
src/npe_proto/: npe_proto_ftp.c  npe_proto_imap.c  npe_proto_ldap.c  npe_proto_mongodb.c  npe_proto_mysql.c  npe_proto_redis.c  npe_proto_smb.c  npe_proto_smtp.c  npe_proto_snmp.c  npe_proto_ssh.c  npe_proto_telnet.c
src/packet/: fast_tx.c  ip6.c
src/recon/: context.c  diff.c  evidence.c  graph.c  module.c  output_base.c  output_builtin.c  output_registry.c  output_stage.c  persist.c  port_table.c  query.c  recon_run.c
src/route/: hop_scanner.c  route_output.c  traceroute.c
src/runtime/: event_loop.c  full_runtime.c  io_engine.c  io_engine_epoll.c  io_engine_kqueue.c  io_engine_uring.c  rate_ctrl.c  stats.c  stats_display.c  (+2 more)
tests/: CMakeLists.txt  test.h  test_arena.c  test_checksum.c  test_cidr.c  test_evasion_args.c  test_ipv6.c  test_main.c  test_npe_registry_cache.c  test_output_args.c  test_port_table.c  test_ports.c  test_privilege_policy.c  test_recon_core.c  test_recon_output_format.c  test_recon_output_visibility.c  test_recon_scheduler.c  test_scanflags.c  test_subenum_dns_packet.c  test_subenum_result_store.c  test_subenum_wordlist.c  test_timing_template.c  test_udp_defaults.c
utils/: utils.c
(+108 files in other folders)
